--- a/lams_tool_assessment/web/includes/css/assessment.scss
+++ b/lams_tool_assessment/web/includes/css/assessment.scss
@@ -101,7 +101,7 @@ table.table-row-spacing {
 	margin-top: -10px;
 }
 
-// countdown growl
+/*----------countdown growl----------------*/
 .jGrowl {
   	font-size: 22px;
   	font-family: $font-family-base;
@@ -118,3 +118,11 @@ table.table-row-spacing {
 	padding-left: 10px;
 	padding-top: 5px;
 }
+
+/*----------SORTABLE----------------*/
+.sortable-chosen {
+  background-color: #fff; 
+}
+.sortable-placeholder {
+  background-color: rgba(241, 241, 241, 0.7); 
+ }
